force-app/main/default/objects/Access_Control_Profile__c/fields/Parent_Profile__c.field-meta.xml
<CustomField>
    <fullName>Parent_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent profile is the ACP that is common for all parties.</description>
    <inlineHelpText>Link this profile with your general ACP</inlineHelpText>
    <label>Parent Profile</label>
    <referenceTo>Access_Control_Profile__c</referenceTo>
    <relationshipLabel>Access Control Profile</relationshipLabel>
    <relationshipName>Parent_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>