force-app/main/default/objects/Access_Control_Profile__c/fields/PBCS_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>PBCS_Provision_Date__c</fullName>
    <description>The date PBCS was provisioned</description>
    <label>PBCS Provision Date</label>
    <type>Date</type>
</CustomField>