force-app/main/default/objects/Access_Control_Profile__c/fields/PBCS_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>PBCS_Revoke_Date__c</fullName>
    <description>The date PBCS was revoked</description>
    <label>PBCS Revoke Date</label>
    <type>Date</type>
</CustomField>