force-app/main/default/objects/Access_Control_Profile__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Employee&apos;s phone number</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>