force-app/main/default/objects/Access_Control_Profile__c/fields/Phone_Owner__c.field-meta.xml
<CustomField>
    <fullName>Phone_Owner__c</fullName>
    <label>Phone Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>NetNumber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>