force-app/main/default/objects/Access_Control_Profile__c/fields/Phone_System_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Provision_Date__c</fullName>
    <description>Date Phone system was provided.</description>
    <label>Phone System Provision Date</label>
    <type>Date</type>
</CustomField>