force-app/main/default/objects/Access_Control_Profile__c/fields/Phone_System_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Revoke_Date__c</fullName>
    <description>Date Phone System was revoked.</description>
    <label>Phone System Revoke Date</label>
    <type>Date</type>
</CustomField>