force-app/main/default/objects/Access_Control_Profile__c/fields/Policy_Exception__c.field-meta.xml
<CustomField>
    <fullName>Policy_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Exception</label>
    <type>Checkbox</type>
</CustomField>