force-app/main/default/objects/Access_Control_Profile__c/fields/Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Name__c</fullName>
    <label>Policy Name</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>