force-app/main/default/objects/Access_Control_Profile__c/fields/Printers_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Printers_Provision_Date__c</fullName>
    <label>Printers Provision Date</label>
    <type>Date</type>
</CustomField>