force-app/main/default/objects/Access_Control_Profile__c/fields/Printers_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Printers_Revoke_Date__c</fullName>
    <label>Printers Revoke Date</label>
    <type>Date</type>
</CustomField>