force-app/main/default/objects/Access_Control_Profile__c/fields/Ravello_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Ravello_Provision_Date__c</fullName>
    <description>The date Ravello access was provisioned</description>
    <label>Ravello Provision Date</label>
    <type>Date</type>
</CustomField>