force-app/main/default/objects/Access_Control_Profile__c/fields/Ravello_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Ravello_Revoke_Date__c</fullName>
    <description>The date Ravello access was revoked.</description>
    <label>Ravello Revoke Date</label>
    <type>Date</type>
</CustomField>