force-app/main/default/objects/Access_Control_Profile__c/fields/Red_Hat_Portal_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Red_Hat_Portal_Provision_Date__c</fullName>
    <description>Date the Red Hat customer portal access was provided.</description>
    <label>Red Hat Portal Provision Date</label>
    <type>Date</type>
</CustomField>