force-app/main/default/objects/Access_Control_Profile__c/fields/Red_Hat_Portal_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Red_Hat_Portal_Revoke_Date__c</fullName>
    <description>The date the Red Hat customer portal access was revoked.</description>
    <label>Red Hat Portal Revoke Date</label>
    <type>Date</type>
</CustomField>