force-app/main/default/objects/Access_Control_Profile__c/fields/Red_Hat_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Red_Hat_Provision_Date__c</fullName>
    <label>Red Hat Provision Date</label>
    <type>Date</type>
</CustomField>