force-app/main/default/objects/Access_Control_Profile__c/fields/RFPIO_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>RFPIO_Provision_Date__c</fullName>
    <description>Date RFPIO was provided.</description>
    <label>RFPIO Provision Date</label>
    <type>Date</type>
</CustomField>