force-app/main/default/objects/Access_Control_Profile__c/fields/RFPIO_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>RFPIO_Revoke_Date__c</fullName>
    <description>Date RFPIO was revoked.</description>
    <label>RFPIO Revoke Date</label>
    <type>Date</type>
</CustomField>