force-app/main/default/objects/Access_Control_Profile__c/fields/Salesforce_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Provision_Date__c</fullName>
    <description>Date salesforce was provided</description>
    <label>Salesforce Provision Date</label>
    <type>Date</type>
</CustomField>