force-app/main/default/objects/Access_Control_Profile__c/fields/Salesforce_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Revoke_Date__c</fullName>
    <description>Date Salesforce was revoked</description>
    <label>Salesforce Revoke Date</label>
    <type>Date</type>
</CustomField>