force-app/main/default/objects/Access_Control_Profile__c/fields/Service_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Name__c</fullName>
    <description>The name used for the service account.</description>
    <label>Service Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>