force-app/main/default/objects/Access_Control_Profile__c/fields/Shared_Account_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Shared_Account_Review_Date__c</fullName>
    <description>Date the shared account access should be reviewed.</description>
    <label>Shared Account Review Date</label>
    <type>Date</type>
</CustomField>