force-app/main/default/objects/Access_Control_Profile__c/fields/Slack_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Slack_Provision_Date__c</fullName>
    <description>The date Slack was Provisioned.</description>
    <label>Slack Provision Date</label>
    <type>Date</type>
</CustomField>