force-app/main/default/objects/Access_Control_Profile__c/fields/Slack_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Slack_Revoke_Date__c</fullName>
    <description>The date Slack was revoked.</description>
    <label>Slack Revoke Date</label>
    <type>Date</type>
</CustomField>