force-app/main/default/objects/Access_Control_Profile__c/fields/Spiff_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Provision_Date__c</fullName>
    <description>The date Spiff was provisioned</description>
    <label>Spiff Provision Date</label>
    <type>Date</type>
</CustomField>