force-app/main/default/objects/Access_Control_Profile__c/fields/Spiff_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Revoke_Date__c</fullName>
    <description>The date Spiff was revoked</description>
    <label>Spiff Revoke Date</label>
    <type>Date</type>
</CustomField>