force-app/main/default/objects/Access_Control_Profile__c/fields/Subversion_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Subversion_Provision_Date__c</fullName>
    <description>Date Subversion access was provided.</description>
    <label>Subversion Provision Date</label>
    <type>Date</type>
</CustomField>