force-app/main/default/objects/Access_Control_Profile__c/fields/Subversion_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Subversion_Revoke_Date__c</fullName>
    <description>Date Subversion access was revoked.</description>
    <label>Subversion Revoke Date</label>
    <type>Date</type>
</CustomField>