force-app/main/default/objects/Access_Control_Profile__c/fields/UCS_Storage_Arrays_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>UCS_Storage_Arrays_Provision_Date__c</fullName>
    <label>UCS Storage Arrays Provision Date</label>
    <type>Date</type>
</CustomField>