force-app/main/default/objects/Access_Control_Profile__c/fields/UCS_Switches_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>UCS_Switches_Provision_Date__c</fullName>
    <label>UCS Switches Provision Date</label>
    <type>Date</type>
</CustomField>