force-app/main/default/objects/Access_Control_Profile__c/fields/Udemy_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Udemy_Provision_Date__c</fullName>
    <description>The date Udemy access was provided</description>
    <label>Udemy Provision Date</label>
    <type>Date</type>
</CustomField>