force-app/main/default/objects/Access_Control_Profile__c/fields/Udemy_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Udemy_Revoke_Date__c</fullName>
    <description>The date Udemy access was revoked</description>
    <label>Udemy Revoke Date</label>
    <type>Date</type>
</CustomField>