force-app/main/default/objects/Access_Control_Profile__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vendor related to the ACP</description>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Access Control Profile</relationshipLabel>
    <relationshipName>Access_Control_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>