force-app/main/default/objects/Access_Control_Profile__c/fields/Verizon_AT_T_T_Mobile_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Verizon_AT_T_T_Mobile_Revoke_Date__c</fullName>
    <label>Verizon, AT&amp;T, T-Mobile Revoke Date</label>
    <type>Date</type>
</CustomField>