force-app/main/default/objects/Access_Control_Profile__c/fields/Verizon_Enterprise_Portal_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Verizon_Enterprise_Portal_Provision_Date__c</fullName>
    <label>Verizon Enterprise Portal Provision Date</label>
    <type>Date</type>
</CustomField>