force-app/main/default/objects/Access_Control_Profile__c/fields/Verizon_Network_Extender_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Verizon_Network_Extender_Revoke_Date__c</fullName>
    <label>Verizon Network Extender Revoke Date</label>
    <type>Date</type>
</CustomField>