force-app/main/default/objects/Access_Control_Profile__c/fields/VM_Ware_UCS_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>VM_Ware_UCS_Provision_Date__c</fullName>
    <description>Date VM Ware UCS was provided.</description>
    <inlineHelpText>vcenter access</inlineHelpText>
    <label>VMWare UCS Provision Date</label>
    <type>Date</type>
</CustomField>