force-app/main/default/objects/Access_Control_Profile__c/fields/VM_Ware_UCS_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>VM_Ware_UCS_Revoke_Date__c</fullName>
    <description>Date VM Ware UCS was revoked.</description>
    <label>VMWare UCS Revoke Date</label>
    <type>Date</type>
</CustomField>