force-app/main/default/objects/Access_Control_Profile__c/fields/VMware_Portal_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>VMware_Portal_Provision_Date__c</fullName>
    <label>VMware Portal Provision Date</label>
    <type>Date</type>
</CustomField>