force-app/main/default/objects/Access_Control_Profile__c/fields/WebEx_Admin_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>WebEx_Admin_Revoke_Date__c</fullName>
    <label>WebEx Admin Revoke Date</label>
    <type>Date</type>
</CustomField>