force-app/main/default/objects/Access_Control_Profile__c/fields/Webex_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Webex_Provision_Date__c</fullName>
    <description>Date Webex was provided.</description>
    <label>Webex Provision Date</label>
    <type>Date</type>
</CustomField>