force-app/main/default/objects/Access_Control_Profile__c/fields/Webex_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Webex_Revoke_Date__c</fullName>
    <description>Date Webex was revoked.</description>
    <label>Webex Revoke Date</label>
    <type>Date</type>
</CustomField>