force-app/main/default/objects/Access_Control_Profile__c/fields/WiFI_Controllers_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>WiFI_Controllers_Revoke_Date__c</fullName>
    <label>WiFI Controllers Revoke Date</label>
    <type>Date</type>
</CustomField>