force-app/main/default/objects/Access_Control_Profile__c/fields/Work_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Work_Email_Address__c</fullName>
    <description>Completed when the work email is created.</description>
    <label>Work Email Address</label>
    <type>Email</type>
</CustomField>