force-app/main/default/objects/Access_Control_Profile__c/recordTypes/ACP.recordType-meta.xml
<RecordType>
    <fullName>ACP</fullName>
    <active>true</active>
    <description>Non-administrative user access supports the functions that a general user of the system, device or software application would perform.</description>
    <label>ACP</label>
</RecordType>