force-app/main/default/objects/Access_Control_Profile__c/recordTypes/ADMIN_ACP.recordType-meta.xml
<RecordType>
    <fullName>ADMIN_ACP</fullName>
    <active>true</active>
    <description>Administrative user access typically includes: the ability to configure and modify access controls on a system, tool or device; the ability to add/remove users; the ability to perform any administrative functions</description>
    <label>ADMIN - ACP</label>
</RecordType>