force-app/main/default/objects/Access_Control_Profile__c/recordTypes/Service_Account_ACP.recordType-meta.xml
<RecordType>
    <fullName>Service_Account_ACP</fullName>
    <active>true</active>
    <description>M2M, Machine-to-Machine, communications must be access controlled using a separate account and access privileges specific to the API and capabilities.</description>
    <label>Service Account - ACP</label>
</RecordType>