force-app/main/default/objects/Access_Control_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Service_Account_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type__c</columns>
    <columns>Employee_Department__c</columns>
    <columns>Manager__c</columns>
    <columns>Employee_Termination_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>